[gd_scene load_steps=9 format=3 uid="uid://bj4xgn05k5xvf"]

[ext_resource type="Script" path="res://scripts/player/state_machine.gd" id="1_asilg"]
[ext_resource type="Script" path="res://scripts/player/states/motion/on_ground/idle.gd" id="2_7yaib"]
[ext_resource type="PackedScene" uid="uid://ccs0m0ecnco21" path="res://prefabs/weapons/primary_weapons/debug_flamethrower.tscn" id="2_ufug7"]
[ext_resource type="PackedScene" uid="uid://di0h4jvrj2l1y" path="res://prefabs/weapons/secondary_weapons/debug_launcher.tscn" id="3_hxjqm"]
[ext_resource type="Script" path="res://scripts/player/states/motion/on_ground/move.gd" id="3_oi43o"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uowiw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2rab0"]

[sub_resource type="BoxMesh" id="BoxMesh_7kcu7"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07451, 0)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_asilg")

[node name="Torso" type="Node3D" parent="."]

[node name="TorsoMesh" type="MeshInstance3D" parent="Torso"]
mesh = SubResource("CapsuleMesh_uowiw")
skeleton = NodePath("../..")

[node name="Guns" type="Node3D" parent="Torso"]
transform = Transform3D(1, 1.79625e-11, 0, 1.43245e-11, 1, 0, 1.16415e-10, -2.32831e-10, 1, 0, 0, 0)

[node name="PrimarySlot1" type="Node3D" parent="Torso/Guns"]
transform = Transform3D(1, 1.79625e-11, 0, 1.40972e-11, 1, -2.32831e-10, 4.65661e-10, -2.32831e-10, 1, 0.556247, 0.163041, -0.30528)

[node name="PrimaryGun" parent="Torso/Guns/PrimarySlot1" instance=ExtResource("2_ufug7")]

[node name="PrimarySlot2" type="Node3D" parent="Torso/Guns"]
transform = Transform3D(1, 1.76215e-11, 0, 1.42109e-11, 1, -1.16415e-10, 2.91038e-10, -5.82077e-10, 1, -0.594656, 0.161992, -0.304177)

[node name="PrimaryGun" parent="Torso/Guns/PrimarySlot2" instance=ExtResource("2_ufug7")]

[node name="SecondarySlot1" type="Node3D" parent="Torso/Guns"]
transform = Transform3D(1, 0.00128581, 0.000310462, -0.000374036, 0.5, -0.866026, -0.00126877, 0.866025, 0.500001, 0.644041, 0.664011, 0.495822)

[node name="SecondaryGun" parent="Torso/Guns/SecondarySlot1" instance=ExtResource("3_hxjqm")]
skeleton = NodePath("")

[node name="SecondarySlot2" type="Node3D" parent="Torso/Guns"]
transform = Transform3D(1, 0.0012858, 0.000310462, -0.000374036, 0.5, -0.866026, -0.00126877, 0.866025, 0.500001, -0.593889, 0.664011, 0.495822)

[node name="SecondaryGun" parent="Torso/Guns/SecondarySlot2" instance=ExtResource("3_hxjqm")]
transform = Transform3D(1, 9.8662e-09, -7.27596e-11, -8.73115e-11, 1, 2.98023e-08, -1.89175e-10, 0, 1, -5.96046e-08, 0, 0)
skeleton = NodePath("")

[node name="LockOnRayCast" type="RayCast3D" parent="Torso/Guns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, -7.87258e-19, 1, 3.48172e-12, -0.193833, -4.51302e-11)
target_position = Vector3(0, 0, -100)
collision_mask = 4

[node name="BaseCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.547985, 0)
shape = SubResource("BoxShape3D_2rab0")

[node name="BaseMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.547985, 0)
mesh = SubResource("BoxMesh_7kcu7")

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("2_7yaib")

[node name="Move" type="Node" parent="States"]
script = ExtResource("3_oi43o")

[node name="HealRechargeTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="HealRechargeTimer" to="." method="_on_heal_recharge_timer_timeout"]
